public/css/common.css
/* ... */
.business-item .glyphicon-edit{
    text-align: right;
    position: absolute;
    color: #FFFFFF;
    background: url(../images/btn_bg.png) repeat;
    padding: 5px;
    border-radius: 5px;
    font-size: 14px;
    margin: 5px 10px 0px 0px;
    right: 0;
    cursor: pointer;
}

.salesItemImage
{
    width: 4%;
    margin-top: 1.6%;
    margin-left: 2%;
}
.itemCombo
{
    width: 47.2%;
    margin-top: 1.60%;
    margin-left: 1%;
}
.plusMinusButton
{
    margin-left: 0.5%;
    width: 4%;
    margin-top: 1.60%;
}
.rateTextBox
{
    width: 7%;
    margin-left: 1%;
    margin-top: 1.60%;
}
.amountTextBox
{
    margin-left: 1%;
    width: 12.5%;
    margin-top: 1.60%;
}
.thumbnail .btn-icon{
    position: absolute;
    background: url(../images/btn_bg.png) repeat;
    border-radius: 5px;
    font-size: 14px;
    margin: 0px 10px 0px 0px;
    right: 0;
    cursor: pointer;
    font-size: 12px;
}

.well-settings{
    border-radius: 0px;
    -webkit-box-shadow: none;
    box-shadow: none;
}

/*** For circular tabs use this class ***/
.ezeid-circle{
    height: 80px;
    width: 80px;
    border-radius: 60px;
    background: #0A8ECE;
    color: #fff;
    display: table-cell;
    vertical-align: middle;
    font-size: 10px;
    text-align: center;
}

.ezeid-circle .active{
    background: #37CC35;
}

.no-radius{
    border-radius: 0px;
}

.map-container{
    padding:10px;
}
.map-container #map-canvas{
    height:200px;
    width: 100%;
}

.map-container #pac-input{
    width: 50%;
    border-radius: 0px;
    margin:10px;
}

.map-container #pac-loc{
    margin: 15px;
}

.business-manager .nav > li{
    margin-right: 10px;
    padding-right:1px;
}
.business-manager .nav > li > a{
    font-size: 16px;
    font-family: 'Roboto',sans-serif;
    color:#fff;
    background: #44A9D1;
    border-radius: 0px;
}

.business-manager .nav > li.active > a{
    background: #fff;
    color:#078FC3;
}

/****** UI Grid Style *****/
.ui-grid-header-cell {
    background-color: #6E6E6E;
    border-color: transparent;
    color: #fff;
    font-family: 'Roboto',sans-serif;
    font-weight: 200;
}
.ui-grid-row-header-cell {
    background-color: #6E6E6E !important;
    border-bottom: solid 1px #d4d4d4;
}

.ui-grid-top-panel{
    background: #6E6E6E;
}
.ui-grid-pinned-container{
    color:#ffffff;
    font-family:'Roboto',sans-serif;
}

.ui-grid-cell-focus {
    outline: 0;
    background-color: #46849D;
    color: #FFF;
}

.ui-grid-row-selected > [ui-grid-row] > .ui-grid-cell{
    background-color: #50696E !important;
    color: #2CC4FF;
}
.ui-grid-row-selected .ui-grid-cell-contents {
    background: #46849D;
}

.ui-grid-row-selected .expandableRow{
    color:#ffffff;
    background: #46849D;
}

.ui-grid-menu .ui-grid-menu-inner ul li {
    background: #1291CC;
    color: #fff;
}

.ui-grid-menu .ui-grid-menu-inner ul li.ui-grid-menu-item-active {
    -webkit-box-shadow: inset 0 0 14px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: inset 0 0 14px rgba(0, 0, 0, 0.2);
    box-shadow: inset 0 0 14px rgba(0, 0, 0, 0.2);
    background-color: #215D96;
}

.ui-grid-row-selected .expandableRow{
    height: 182px;
}
.ui-grid-row-selected .expandableRow .ui-grid-header-cell .ui-grid-cell-contents{
    background: #6E6E6E;
}

.ui-grid-pager-control button{
    background: #0c89ba;
    color:#fff;
    border-radius: 0px;
    border:none;
}

.ui-grid-pager-control .last-triangle {
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 5px 0 5px 8.7px;
    border-color: transparent transparent transparent #ffffff;
    margin-left: -1px;
}

.ui-grid-pager-control .first-triangle {
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 5px 8.7px 5px 0;
    border-color: transparent #ffffff transparent transparent;
    margin-left: 2px;
}

.ui-grid-pager-control .last-bar {
    width: 10px;
    border-left: 2px solid #ffffff;
    margin-top: -6px;
    height: 12px;
    margin-left: 1px;
}

.ui-grid-pager-control .first-bar {
    width: 10px;
    border-left: 2px solid #ffffff;
    margin-top: -6px;
    height: 12px;
    margin-left: -3px;
}

.ui-grid-pager-control input,.ui-grid-pager-control select {
    height: 26px;
    width: 50px;
    vertical-align: top;
    border: 0px;
    border: 1px solid #0c89ba;
    color:#000;
}

.ui-grid-pager-row-count-picker select {
    height: 26px;
    width: 60px;
    border-radius: 0px;
    border: 1px solid #0c89ba;
    color:#000;
}

.ui-grid-pager-panel {
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    padding-top: 3px;
    padding-bottom: 3px;
    box-shadow: 0px 0px 5px #9F9F9F;
    background: #2E2E2E;
    color: #fff;
}

.ui-grid-filter-input{
    color:#000;
}

/** UI Grid Custom CSS **/

.ui-grid-custom-btn{
    margin:5px 5px 5px 15px;
}
.ui-grid-subgrid{
    overflow: auto;
    height: 100px;
}

input[type="text"].ui-grid-filter-input {
    color: #44A9D1;
    padding: 0;
    margin: 0;
    border: 0;
    width: 100%;
    border: 1px solid #808080;
    background: #393939;
    -webkit-border-top-right-radius: 0px;
    -webkit-border-bottom-right-radius: 0;
    -webkit-border-bottom-left-radius: 0;
    -webkit-border-top-left-radius: 0;
    -moz-border-radius-topright: 0px;
    -moz-border-radius-bottomright: 0;
    -moz-border-radius-bottomleft: 0;
    -moz-border-radius-topleft: 0;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
    -moz-background-clip: padding-box;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
}

.ui-grid-cell-focus {
    outline: 0;
    background-color: transparent;
    color: #004CA7;
}

.ui-grid-filter-container {
    padding: 4px 10px;
    padding-left: 0;
    position: relative;
}

